# docs/swagger.yaml
@@ -121,6 +121,30 @@ paths:
         - $ref: '#/components/parameters/taskId'
       tags:
         - tasks
+  /tasks/{taskId}/share:
+    put:
+      summary: タスクを共有
+      description: タスクを共有します
+      security:
+        - cookieAuth: []
+      responses:
+        204:
+          description: No Content
+        400:
+          description: Bad Request
+        403:
+          description: Forbidden
+      operationId: shareTask
+      parameters:
+        - $ref: '#/components/parameters/taskId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ShareTaskRequest'
+        required: true
+      tags:
+        - tasks
   /users/me:
     get:
       summary: ログインユーザーを取得
@@ -334,6 +358,16 @@ components:
         - title
         - description
         - done
+    ShareTaskRequest:
+      title: ShareTaskRequest
+      type: object
+      properties:
+        name:
+          type: string
+          pattern: '^[a-zA-Z0-9_-]{1,32}$'
+          description: ユーザー名
+      required:
+        - name
     User:
       title: User
       type: object
